[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Attack/AreaCaster.gd" type="Script" id=1]

[node name="AreaCaster" type="Node2D"]
script = ExtResource( 1 )

[node name="ChargeTimer" type="Timer" parent="."]

[node name="CastTimer" type="Timer" parent="."]

[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
